--- a/package.json
+++ b/package.json
@@ -1,27 +1,16 @@
 {
-  "name": "pikaday",
-  "version": "1.2.0",
+  "name": "dbushell-pikaday",
   "description": "A refreshing JavaScript Datepicker — lightweight, no dependencies, modular CSS",
+  "version": "1.2.0",
   "keywords": [
     "datepicker",
     "calendar",
     "date"
   ],
-  "homepage": "http://dbushell.github.io/Pikaday/",
-  "bugs": "https://github.com/dbushell/Pikaday/issues",
-  "licenses": [{
-    "type": "BSD",
-    "url": "http://opensource.org/licenses/BSD-3-Clause"
-  }, {
-    "type": "MIT",
-    "url": "http://opensource.org/licenses/MIT"
-  }],
   "main": "pikaday.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/dbushell/Pikaday.git"
-  },
-  "optionalDependencies": {
-    "moment": "2.x"
-  }
+  "styles": [
+    "css/pikaday.css"
+  ],
+  "dependencies": {},
+  "license": "MIT"
 }
